[Refactor] 문의, 리뷰 Controller - ResponseEntity 와일드카드 제네릭 타입 제거 #20