@@ -1,7 +1,5 @@
 package PU.pushop.review.model;
 
-import PU.pushop.Inquiry.model.InquiryReplyDto;
-import PU.pushop.payment.entity.PaymentHistory;
 import PU.pushop.review.entity.Review;
 import jakarta.validation.constraints.Max;
 import jakarta.validation.constraints.Min;
@@ -11,7 +9,6 @@ import lombok.NoArgsConstructor;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Data
 @AllArgsConstructor
@@ -44,17 +41,8 @@ public class ReviewDto {
                 review.getPaymentHistory().getOrders().getMember().getUsername(),
                 review.getPaymentHistory().getProduct().getProductId(),
                 review.getPaymentHistory().getProduct().getProductName(),
-                review.getReplies() != null ? review.getReplies().stream().map(ReviewReplyDto::new).collect(Collectors.toList()) : null
+                review.getReplies() != null ? review.getReplies().stream().map(ReviewReplyDto::new).toList() : null
         );
-    }
-
-    public static Review requestForm(ReviewDto request) {
-        Review review = new Review();
-
-        review.setReviewContent(request.getReviewContent());
-        review.setRating(request.getRating());
-
-        return review;
     }
 
 }
